Fixes Spacing on Compact-Collection in Show-Flyout
SRFCMSAL-2501

--- a/source/_patterns/20-molecules/show-info/show-info.scss
+++ b/source/_patterns/20-molecules/show-info/show-info.scss
@@ -303,7 +303,7 @@
     margin-right: 16px;
     margin-left: 16px;
 
-    @include desktop-wide {
+    @include tablet-up {
       margin-right: 0;
       margin-left: 0;
     }
